--- a/Vezeeta.Core/Vezeeta.Core/Vezeeta.Core.csproj
+++ b/Vezeeta.Core/Vezeeta.Core/Vezeeta.Core.csproj
@@ -13,4 +13,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vezeeta.Infrastructure\Vezeeta.Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
