login for doctors works successfully!

--- a/Vezeeta.Core/Vezeeta.Services/Vezeeta.Services.csproj
+++ b/Vezeeta.Core/Vezeeta.Services/Vezeeta.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vezeeta.Infrastructure\Vezeeta.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
