--- a/Vezeeta.Core/Vezeeta.Services/Vezeeta.Services.csproj
+++ b/Vezeeta.Core/Vezeeta.Services/Vezeeta.Services.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis" Version="1.64.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.64.0" />
+    <PackageReference Include="Google.Apis.Gmail.v1" Version="1.64.0.3231" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="MimeKit" Version="4.3.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Vezeeta.Infrastructure\Vezeeta.Infrastructure.csproj" />
   </ItemGroup>
 
